<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:background="@drawable/gradient2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <!--    android:layout_centerInParent="true"-->


    <TextView
        android:id="@+id/textViewMain4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55px"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/aboutUs"
        android:textColor="@color/black"
        android:textSize="80px" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20px"
        android:layout_marginTop="470px"
        android:text="@string/check5" />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20px"
        android:layout_marginTop="600px"
        android:text="@string/check2"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="600px"
        android:text="@string/check3"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="470px"
        android:text="@string/check4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="470px"
        android:layout_marginRight="55px"
        android:text="@string/check1" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="600px"
        android:layout_marginRight="20px"
        android:text="@string/check6" />

    <TextView
        android:id="@+id/textViewMain4_2"
        android:layout_width="389dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300px"
        android:layout_marginEnd="13dp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/selectMain4"
        android:textSize="40px" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="700px"
        android:layout_height="700px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200px"
        app:srcCompat="@drawable/lolo" />

    <Button
        android:id="@+id/imageButton_main4"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300px"
        android:text="SEND"
        android:textColor="@color/white"
        android:textSize="60px" />
     <!--    android:onClick="message"-->

</RelativeLayout>




