<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    android:background="@drawable/gradient2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity5"
    app:layout_constraintBaseline_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:id="@+id/textViewMain4_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300px"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/txtMain6"
        android:textSize="60px" />

    <TextView
        android:id="@+id/textViewMain4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80px"
        android:layout_marginTop="70px"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/Thanks"
        android:textColor="@color/black"
        android:textSize="80px" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500px"
        android:layout_marginBottom="500px">

    </VideoView>

    <TextView
        android:id="@+id/textViewMain4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1250px"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/txtMain5"
        android:textSize="55px" />


</FrameLayout>