<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@drawable/green"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="259px"
            android:layout_height="250px"
            android:background="@drawable/profile"
            android:layout_marginTop="60px"
            android:layout_marginBottom="40px"
            android:layout_gravity="top|center_horizontal">
        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/newProfile"
            android:textColor="@color/black"
            android:textSize="65px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:layout_marginTop="40px"
            android:layout_marginStart="40px"
            android:layout_marginEnd="40px"
            app:startIconDrawable="@drawable/ic_baseline_pets_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:hint="@string/label2"
                app:startIconDrawable="@drawable/ic_baseline_pets_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextM14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:hint="@string/label3"
                app:startIconDrawable="@drawable/ic_baseline_pets_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextM3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:hint="@string/label5"
                app:startIconDrawable="@drawable/ic_baseline_pets_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextM12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40px"
                android:layout_marginTop="40px"
                android:layout_marginEnd="40px"
                android:fontFamily="sans-serif-black"
                android:text="@string/label4"
                android:textColor="@color/black"
                android:textSize="40px">

            </TextView>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:onClick="onRadioButtonClicked"
                android:text="yes I have" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:onClick="onRadioButtonClicked"
                android:text="no I dont have" />

        </RadioGroup>

        </LinearLayout>




        <Button
            android:id="@+id/buttonMain3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60px"
            android:fontFamily="sans-serif-light"
            android:text="@string/btn_main3"
            android:onClick="onClickSave"
            android:textSize="40px" />




    </LinearLayout>
</ScrollView>
